# Spiel_SPARTA

./: README.md
Hanabi_SPARTA/: .gitignore  CMakeLists copy.txt  CMakeLists.txt  Makefile  cmake_install.cmake  eval_bot.py  setup.py  setup_tiny copy.py  setup_tiny.py  test.py
Hanabi_SPARTA/csrc/: BotFactory.h  BotUtils.cc  BotUtils.h  Custom.h  CustomServer.cc  Hanabi.h  HanabiServer.cc  JointSearchBot.cc  JointSearchBot.h  SearchBot.cc  SearchBot.h  SimpleBot.cc  SimpleBot.h  TinyHanabi.h  extension.cc  extensiontiny copy.cc  extensiontiny.cc  tiny_hanabi_test copy 3.cc  tiny_hanabi_test copy.cc  tiny_hanabi_test.cc
Hanabi_SPARTA/webapp/: package-lock.json  package.json
open_spiel/open_spiel/: CMakeCache.txt  spiel.cc
open_spiel/open_spiel/custom_examples/: hanabi.cc  hanabi_build  tiny_hanabi.cc  tiny_hanabi_build
open_spiel/open_spiel/examples/: shared_library_example
